target/classes/META-INF/fabric8/openshift/pista-test-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=pista-test&var-version=0.0.1
  labels:
    app: pista-test
    provider: fabric8
    version: 0.0.1
    group: ke.com.kcbgroup
  name: pista-test
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: pista-test
    provider: fabric8
    group: ke.com.kcbgroup
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=pista-test&var-version=0.0.1
      labels:
        app: pista-test
        provider: fabric8
        version: 0.0.1
        group: ke.com.kcbgroup
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: pista-test:0.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: pista-test:0.0.1
    type: ImageChange
