target/classes/META-INF/fabric8/openshift/pista-test-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: pista-test
    provider: fabric8
    version: 0.0.1
    group: ke.com.kcbgroup
  name: pista-test
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pista-test
